--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta name="yandex-verification" content="0442fa30bba4e805" />
     <title>Наша первая страница</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico" type="images/x-icon">
