--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
 <!DOCTYPE HTML>
-
 <html>
   <head>
-    <meta name="yandex-verification" content="0442fa30bba4e805" />
     <title>Наша первая страница</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico" type="images/x-icon">
   </head>
-
   <!--Здесь начинается тело сайта-->
   <body>
-
     <h1>Дневник по HTML</h1>
     <h2>Примеры и практика</h2>
     <hr>
       <a href="#">Главная</a>&nbsp;&nbsp;&nbsp;<a href="page2.html">Страница 2</a>
     <hr>
     <h3>Базовое оформление текстра на странице</h3>
-
     <p> Теги &lt;h1&gt; - &lt;h6&gt; - отвечают за оформление и вывод заголовков
     с 1 по 6 уровни</p>
-
     <p> Теги &lt;р&gt;  - ооформляет текст в абзаце</p>
-
     <p> Теги &lt;h1&gt; - &lt;h6&gt; - отвечают за оформление и вывод заголовков
     с 1 по 6 уровни</p>
-
       <h3 id="gogogo">Типы списков в HTML</h3>
-
     <p><b>Числовой список</b></p>
     <ol reversed="">
       <li>Первый пункт </li>
@@ -38,7 +29,6 @@
       <li>Шестой пункт </li>
       <li>Седьмой пункт </li>
     </ol>
-
     <p><b>Маркерованый список</b></p>
     <ul type="squre">
       <li>Первый пункт </li>
@@ -56,29 +46,14 @@
       <dd>Язык разметки на котором строятся страницы в интернете</dd>
       <dt>CSS</dt>
       <dd>Каскадная таблица стилей</dd>
-
     </dl>
-
       <h3>Подключение картинок на сайте</h3>
       <img src="images/logo.png" alt="Логотип" title="Логотип">
-
       <h3>Ссылки на сайте</h3>
       <h3><a href="https://vk.com/multilaunch_store">Загляни!</a></h3>
-
+      <a href="dd.html">Тут жарко!</a>
       <a href="#gogogo">Топай выше!</a>
-
     <hr>
-
-
     <p>2015 &copy; Тёма</p>
-
   </body>
 </html>
-
-
-<!--
-
-<tag atr1='zn1 zn2 zn3 ...'>
-
-<tag atr1=zn1 atr2="zn1 zn2 ..." ...></tag>
--->
