--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <hr>
       <a href="#">Главная</a>&nbsp;&nbsp;&nbsp;<a href="page2.html">Страница 2</a>
     <hr>
+          <!--img src="images/anim.png" href="" width="120" alt="Анимация" title="Анимация"-->
+          <a href="dd.html" ><img src="images/anim.png" width="120"  alt="Анимация" title="Анимация" ></a>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;<a href="dd.html" title="Анимация">Тут жарко!</a></p>
+    <hr>
     <h3>Базовое оформление текстра на странице</h3>
     <p> Теги &lt;h1&gt; - &lt;h6&gt; - отвечают за оформление и вывод заголовков
     с 1 по 6 уровни</p>
@@ -51,7 +55,6 @@
       <img src="images/logo.png" alt="Логотип" title="Логотип">
       <h3>Ссылки на сайте</h3>
       <h3><a href="https://vk.com/multilaunch_store">Загляни!</a></h3>
-      <a href="dd.html">Тут жарко!</a>
       <a href="#gogogo">Топай выше!</a>
     <hr>
     <p>2015 &copy; Тёма</p>
