--- a/dd.html
+++ b/dd.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>Объемный фон для сайта с помощью Javascript | Демонстрация для сайта RUDEBOX</title>
+  <title>Анимация</title>
 <link media="screen" href="demo/styles/demo.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
 
