--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <a href="#">Главная</a>&nbsp;&nbsp;&nbsp;<a href="page2.html">Страница 2</a>
     <hr>
           <!--img src="images/anim.png" href="" width="120" alt="Анимация" title="Анимация"-->
-          <a href="dd.html" ><img src="images/anim.png" width="120"  alt="Анимация" title="Анимация" ></a>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;<a href="dd.html" title="Анимация">Тут жарко!</a></p>
+          <a href="anim.html" ><img src="images/anim.png" width="120"  alt="Анимация" title="Анимация" ></a>
+          <p>&nbsp;&nbsp;&nbsp;&nbsp;<a href="anim.html" title="Анимация">Тут жарко!</a></p>
     <hr>
     <h3>Базовое оформление текстра на странице</h3>
     <p> Теги &lt;h1&gt; - &lt;h6&gt; - отвечают за оформление и вывод заголовков
